<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="What are you feeling? 🤔"
            android:textColor="#F08080"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Your Emotion State (Required)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerEmotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/dropdown_background"
            android:hint="Choose from the dropdown box"
            android:padding="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="What was the reason? (Optional)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textMultiLine"
            android:lines="1"
            android:maxLength="200"
            android:padding="12dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="What was the social situation? (Optional)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAlone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="false"
                android:text="Alone"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioTwoSeveral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Two or Several"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioCrowd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="A Crowd"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:text="None"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="What was the social situation? (Optional)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSocialSituation"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textMultiLine"
            android:lines="3"
            android:padding="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Add a Picture (Optional)"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/image_placeholder_background"
                android:scaleType="centerInside" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonUploadPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F08080"
            android:text="Upload Picture"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/publicStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What is the public status of this mood event?"
            android:textColor="#ffafae"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPublicStatus"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:text="Public"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />

            <RadioButton
                android:id="@+id/radioPrivateStatus"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:text="Private"
                android:textColor="#ffafae"
                android:textSize="12sp"
                android:textStyle="bold"
                app:buttonTint="#F08080" />
        </RadioGroup>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/locationPickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/use_current_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F08080"
                android:text="Click to set current location for this mood event" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/input_address_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F08080"
                android:text="Cancel"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F08080"
                android:text="Confirm"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>


        <!-- Main Title -->

        <!-- Emotion State Field -->

        <!-- Reason Field -->

        <!-- Social Situation Radio Buttons -->

        <!-- Second Social Situation Field -->

        <!-- Second Reason Field -->

        <!-- Media Section -->
        <!-- Media Section -->

        <!-- Action Buttons -->

    </LinearLayout>
</ScrollView>